--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,7 @@ body {
     --base-darker: 180 14% 5%;
     --background: var(--base-darker);
     --foreground: 0 0% 98%;
-    --card: var(--base-dark);
+    --card: var(--base-900);
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
